@@ -121,6 +121,8 @@ BEGIN_EVENT_TABLE(PrefsUnifiedDlg,wxDialog)
 
 	EVT_LIST_ITEM_SELECTED(IDC_EVENTLIST,	PrefsUnifiedDlg::OnUserEventSelected)
 
+	EVT_CHOICE(IDC_LANGUAGE,		PrefsUnifiedDlg::OnLanguageChoice)
+
 	EVT_CLOSE(PrefsUnifiedDlg::OnClose)
 
 END_EVENT_TABLE()
@@ -1119,6 +1121,11 @@ void PrefsUnifiedDlg::OnUserEventSelected(wxListEvent& event)
 	IDC_PREFS_EVENTS_PAGE->Layout();
 
 	event.Skip();
+}
+
+void PrefsUnifiedDlg::OnLanguageChoice(wxCommandEvent &evt)
+{
+	thePrefs::GetCfgLang()->UpdateChoice(evt.GetSelection());
 }
 
 void PrefsUnifiedDlg::CreateEventPanels(const int idx, const wxString& vars, wxWindow* parent)
